fixed coverage counting